--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,152 @@
-body {
+* {
+  box-sizing: border-box;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
+}
+@import url('https://fonts.googleapis.com/css?family=Playfair Display&display=swap');
+@import url('http://fonts.cdnfonts.com/css/gilroy-bold');
+
+
+html::-webkit-scrollbar {
+  display: none;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+body {
+  font-family: sans-serif;
+  background-color: #fff;
+  margin: 0;
+}
+
+a {text-decoration: none;}
+
+.landPage{
+  width: 100vw;
+}
+/* NavBar */
+.Navbar{
+  background-color: white;
+  height: 15vh;
+  width: 100%;
+  display: flex;
+  justify-content: space-between; 
+  padding: 0% 3rem;
+  background-color: white;
+}
+.Navlogo{
+  display: flex;
+}
+.Navitem{
+
+  display: flex;
+  justify-content: space-between;
+  margin:  auto;
+ 
+  color: black;
+
+}
+.logo{ margin: auto 0%;}
+.log-name{
+  margin: auto 5%;
+  font-weight: 500;
+  font-size: 24px;
+  line-height: 28.8px;
+  color: #159302;
+}
+.lg2{
+  margin: auto 5%;
+  height: fit-content;
+}
+.lg1{
+  margin: auto 0;
+  height: 30px;
+}
+.NavLinks{
+  display: flex;
+  margin: auto 2rem;
+  color: black;
+}
+.navhid{
+  display: flex;
+}
+.link-to{
+  margin: auto;
+  margin-left: 3rem;
+  text-decoration: none;
+  color: black;
+  
+}
+.link-to:hover{
+  color: #159302;
+}
+.req-btn{
+  border: 1px solid #159302;
+  border-radius: 10px;
+  padding: 15px 30px;
+  margin: auto 0;
+  height: 3rem;
+}
+.req-btn:hover{
+  height: 3.5rem;
+}
+.upbtn{ background-color: #159302; margin-right: 1rem; color: white;}
+
+.ham{ display: none;}
+
+@media  only screen and  (max-width: 768px) {
+
+
+
+.ham{ display: block;
+      margin: auto 0;
+  z-index: 79; height: 2rem; width: 2rem; background-color: #159302;
+}
+
+.navhid{
+  position: absolute;
+  left: -100%;
+  top: 5rem;
+  flex-direction: column;
+  background:transparent; backdrop-filter: blur(20px) grayscale(0.5);
+  width: 100%;
+  height: 100vh;
+  padding-top: 20px;
+  padding-bottom: 20px;
+  text-align: center;
+  transition: 0.3s;
+  display: block;
+}
+.navshow{ left: 0;
+  position: fixed;
+  text-align: center;
+  top: 0;
+  background-color: #159302;
+  width: 100%;
+  height: 100vh;
+  padding-top: 1%;
+  padding-bottom: 20px;
+  transition: 0.3s;
+  display:  flex;
+  flex-direction: column;
+  margin-left: auto;
+  margin-right: auto;
+    z-index: 78;
+}
+
+
+.NavLinks{
+  display: flex;
+  flex-direction: column;
+
+}
+
+.link-to{margin: 1rem auto; display: block; color: white; font-size: 1.5rem; }
+.req-btn{ display: contents;}
+.sign{ margin: 3% auto; font-weight: 700; color: white;}
+
+}
+
+
+/*************************Landing page *****************/
+#homepage{
+  
 }
