--- a/src/index.css
+++ b/src/index.css
@@ -25,12 +25,14 @@ a {text-decoration: none;}
 /* NavBar */
 .Navbar{
   background-color: white;
-  height: 15vh;
+  height: 10vh;
   width: 100%;
   display: flex;
   justify-content: space-between; 
   padding: 0% 3rem;
   background-color: white;
+  position: fixed;
+  z-index: 9;
 }
 .Navlogo{
   display: flex;
@@ -62,12 +64,14 @@ a {text-decoration: none;}
 }
 .NavLinks{
   display: flex;
+
   margin: auto 2rem;
   color: black;
 }
-.navhid{
+.navhid, .navshow{
   display: flex;
 }
+
 .link-to{
   margin: auto;
   margin-left: 3rem;
@@ -81,25 +85,26 @@ a {text-decoration: none;}
 .req-btn{
   border: 1px solid #159302;
   border-radius: 10px;
-  padding: 15px 30px;
-  margin: auto 0;
-  height: 3rem;
+  padding: 0px 15px;
+  margin: auto auto;
+  height: 2rem;
+  cursor: pointer;
 }
-.req-btn:hover{
-  height: 3.5rem;
-}
+
 .upbtn{ background-color: #159302; margin-right: 1rem; color: white;}
+.sign{ font-weight: 400;text-align: center; line-height: 2rem;}
+.req-btn:hover, .sign:hover{ height: 2.5rem; font-weight: 600; line-height: 2.5rem;}
+
 
 .ham{ display: none;}
+.close{ display: none;}
 
-@media  only screen and  (max-width: 768px) {
-
-
-
+@media  only screen and  (max-width: 1023px) {
 .ham{ display: block;
       margin: auto 0;
-  z-index: 79; height: 2rem; width: 2rem; background-color: #159302;
+  z-index: 79; height: 2rem; width: 2rem; color: #159302;
 }
+.close{ color: #fff;}
 
 .navhid{
   position: absolute;
@@ -141,12 +146,250 @@ a {text-decoration: none;}
 
 .link-to{margin: 1rem auto; display: block; color: white; font-size: 1.5rem; }
 .req-btn{ display: contents;}
-.sign{ margin: 3% auto; font-weight: 700; color: white;}
+.sign{ margin: auto auto; font-weight: 700; color: white;}
 
 }
 
 
 /*************************Landing page *****************/
-#homepage{
-  
+.landPage{padding-top: 10vh;}
+#homepage{padding: 3rem 10%; height: 85vh;  display: flex; flex-direction: column; justify-content: center; text-align: center; }
+
+.txt1{color: #159302; font-weight: 550; text-align: center;}
+.txt2{color: gray; text-align: center; margin: 1rem 2%; font-weight: 200;}
+.landpics{margin-top: 7%; display: flex; height: 14rem; justify-content: center; }
+.lndimg{ max-height: max-content;}
+.lndimg2{ z-index: 2; margin-left: -10%; margin-top: -5%; margin-right: -10%; max-height: 100%;}
+#WCAPMSD{ background-color: #EEF6F9;width: 100%; padding: 5% 5%; margin: 3rem auto; display: flex; flex-direction: column;}
+.wcapmsd{justify-content: space-between; display: flex; width: 80%; margin: 5% auto;}
+.wcad{width: 18rem; border-radius: 10%; padding: auto 10%; display: flex; flex-direction: column; text-align: center; height: 18rem; justify-content: center; background-color: #fff;}
+.headtxt{ color: #159302;}
+.subtxt{color: gray;}
+.mb5{margin-bottom: 5%;}
+.wcadwcad{color: #159302; font-size: 1.5rem;}
+.wcadtxt{color: gray;}
+#MeetDT{ background-color: #F9F9F9; width: 100%; padding: 5% 5%; margin: 3rem auto;}
+#Contactus{ background-color: #3A7185; width: 100%; padding: 2% 5%; margin: 3rem auto; display: flex; justify-content: center;}
+.ct1, .ct2{color: #fff;}
+.ctbdy{color: #fff; margin-top: 1rem;}
+
+
+@media  only screen and  (min-width: 769px) and  (max-width: 1000px) {
+  .lndimg{ max-height: 80%;}
+  .txt2{display: none;}
+}
+
+@media  only screen and  (max-width: 768px) {
+  .txt1{font-size: 1.8rem;}
+  .landpics{ display: none;}
+  #WCAPMSD{ }
+  .wcapmsd{flex-direction: column;}
+  .wcad{width: 15rem; margin: 10% auto;}
+  .wcadhead{ }
+  .subtxt{font-weight: 400; font-size: 1rem; text-align: center;}
+  .headtxt{font-weight: 600; font-size: 1.5rem; text-align: center; margin: 1rem auto;
+    }
+    .contactimg{display: none;}
+    .contactbdy{margin-top: 1rem;}
+
+}
+@media  only screen and  (min-width: 769px) {
+.txt1{font-size: 3rem;}
+.txt2{font-size: 1.3rem; margin: 1rem 5%;}
+#WCAPMSD{}
+.wcad{margin-right: 1rem;}
+.wcadhead{display: flex; text-align: center;}
+.subtxt{font-weight: 400; font-size: 1rem;
+  width: 40%; padding: 0.8rem 0 0.8rem 2rem ; text-align: left;}
+.headtxt{font-weight: 500; font-size: 2.5rem;
+  border-right: solid #159302 0.15rem;
+    padding: 0.8rem 2rem 0.8rem 0 ;
+  width: 40%;
+  }
+  .ct1{ font-size: 2rem; border-right: solid #fff 0.15rem;}
+  .contactimg{height:16rem;}
+  .ctimg{ max-height: 100%;}
+  .contactbdy{ margin-top: 3rem;}
+}
+
+
+
+
+
+
+
+
+
+
+
+/*        Footer            */
+#footer{background-color: #F9F9F9; padding: 3% 5%; width: 100vw;}
+.ftgo{display: flex; flex-direction: row;}
+.ftname{margin: auto 1rem; color: #159302; font-weight: 600;}
+
+.ftaddy{ margin-top: 1rem; color: gray;}
+
+@media  only screen and  (max-width: 768px) {
+  #footer{display: flex; flex-direction: column; }
+  .ftlogo{order: 1;}
+  .cprt{order: 3; text-align: center; margin-top: 2rem; color: #159302;}
+  .ftct{order: 2; margin-top: 1rem;}
+}
+
+@media  only screen and  (min-width: 769px) {
+#footer{display: flex;}
+.ftlogo{width: 40%; margin-right: 2%;}
+.ftaddy{ padding-left: 10%;}
+.cprt{width: 40%; display: flex; text-align: center; color: #159302;
+   flex-direction: column; margin-right: 2%; margin-bottom: -5%;
+    justify-content: flex-end;}
+.ftct{width: 20%; display: flex; padding-left: 5%;
+   flex-direction: column; justify-content: center;
+   }
+
+}
+
+
+/***********AdminPage******************************/
+
+
+.logNav{ }
+.adminpage{background-color: #F7F7F7;}
+.dashboardA{background-color: #F7F7F7; width: 100%;}
+.dashbody{background-color: #F7F7F7;}
+
+@media  only screen and  (max-width: 768px) {
+  .logNav{
+    width: 100%;
+    height: 12vh;
+   
+    display: flex; 
+    justify-content: space-between;
+    padding: 1rem 1rem;
+    
+  }
+  .loglogo{display: flex; justify-content: center;}   
+  .loglogo img{width: 2rem; height: 2rem;}
+  .loglogo p{color: #159302; line-height: 2rem; 
+    font-weight: 600; margin-left: 0.5rem; 
+    font-size: 1.5rem;
+  }
+  .loglogname{ display: none;}
+  .loglogondname{display: flex;}
+  .logprof{ width: 7rem; }
+  .profpic{height: 3rem; width: 3rem;  display: flex; margin-left: 3rem;}
+  .droparr{ user-select: none;  margin-left: 1rem; justify-content: center; display: flex; flex-direction: column;}
+  .profpic img{  border-radius: 50%; max-height: 100%; max-width: 100%;}
+  .profdetails{ position: relative; background-color: #F7F7F7; z-index: 9; text-align: right; }
+  .profhide{display:none;}
+  .proftxt{padding-bottom: 1rem; background-color: #F7F7F7;  }
+  .mt5{margin-top: 1rem;}
+  .profname, .profstat{font-size: 1rem;}
+  .outhide{display: none;}
+  .proflogout{ text-align: center; cursor: pointer; z-index: 3; position: relative; padding: 2rem 1rem;
+    line-height: 1.5rem; display: flex; margin-bottom: 3rem; background-color: #F7F7F7;
+    color: red; justify-content: center;}
+  .out{font-size: 1.5rem;}
+  .proflogout:hover{line-height: 2rem;}
+  .out2{font-size: 2rem;}
+  .proflogout p{font-size: 1rem; margin-left: 0.5rem;}  
+ .dashbody{width: 100%; height: 100%; }
+  .dashnav{ background-color: white; height: 10vh; width: 100%; position: fixed; bottom: 0%; display: flex; border-top: #159302 solid 2px;}
+  .dashtitle{ line-height: 2rem; margin: auto 1rem; color: #159302; font-weight: 600;}
+}
+
+@media  only screen and  (min-width: 769px) {
+  .adminpage{display: flex;}
+  .logNav{
+    width: 20%;
+    height: 100vh;
+    border-right: #159302 solid 2px;
+    padding-top: 3rem;
+  }
+  .loglogo{display: flex; justify-content: center;}
+  .loglogo img{width: 2rem; height: 2rem;}
+  .loglogo p{color: #159302; line-height: 2rem; 
+    font-weight: 600; margin-left: 0.5rem; 
+    font-size: 1rem;
+  }
+  .loglogname{ padding-left: 30%; color: #159302; margin-top: 5%;}
+  .loglogondname{display: flex; flex-direction: column;}
+  .logprof{ margin-top: 20%;}
+  .profpic{height: 5rem; width: 5rem; margin: auto auto; display: flex; justify-content: center;}
+  .droparr{ user-select: none;  margin-left: 1rem; justify-content: center; display: flex; flex-direction: column;}
+  .profpic img{border-radius: 50%; max-height: 100%; max-width: 100%;}
+  .profdetails{ padding-left: 30%; width: 100%;}
+  .profhide{display:none;}
+  .proftxt{ margin: 5% auto; height: 5rem;}
+  .mt5{margin-top: 5%;}
+  .profname, .profstat{font-size: 0.8rem;}
+  .proflogout, .outhide{margin-top: 95%; text-align: center; cursor: pointer;
+    line-height: 1.5rem; display: flex; margin-bottom: 3rem;
+    color: red; justify-content: center;}
+  .out{font-size: 1.5rem;}
+  .proflogout:hover, .outhide:hover{line-height: 2rem;}
+  .out2{font-size: 2rem;}
+  .proflogout p, .outhide p{font-size: 1rem; margin-left: 0.5rem;}
+
+  .dashboard{ width: 80%; }
+  .dashbody{margin-top: 10vh; display: flex; flex-direction: column; justify-content: center;}
+  .dashnav{ background-color: white; height: 10vh; width: 100%; position: fixed; display: flex;}
+  .dashtitle{ font-size: 2rem; line-height: 2rem; margin: auto 1rem; color: #159302; font-weight: 400;}
+}
+
+/***Dashboard **************/
+
+.generalbul, .apartbul{ background-color: #fff; box-shadow: 0px 2px 4px 2px #0000001A;
+border-radius: 1rem;
+}
+.gbtxt{ color: #0D5A01;}
+.vol,.pwrcos,.peakI,.rmsI, .aptvol,.aptpwrcos,.aptpeakI,.aptrmsI{ border-radius: 10px; box-shadow: 0px 2px 4px 2px #0000001A;
+}
+
+.vol, .aptvol{ background-color: #E8F4E6; color: #35A224; }
+.pwrcos, .aptpwrcos{ background-color: #E6E8E9; color: #2C3E4C;}
+.peakI, .aptpeakI{ background-color: #FAFAFF; color: #94959C;}
+.rmsI, .aptrmsI{ background-color: #EEF6F9; color: #336374;}
+.powctr{display: flex;}
+.powctxt{font-weight: 600; font-size: 1rem; margin-right: 20%;}
+.ctrbtnon, .ctrbtnoff{ display: flex; height: 1.3rem; width: 2.5rem; 
+  background-color: #E8F4E6; border-radius: 2rem; cursor: pointer;}
+.ctrbtnoff{justify-content: left;}
+.ctrbtnon{justify-content: right;}
+.ctrbtnoff .PWRON{background-color: gray;}
+.PWRON{ background-color: #159302; border-radius: 50%; width: 50%; height: 1.4rem; margin: auto 1px}
+ 
+@media  only screen and  (max-width: 768px) {
+  .generalbul{ margin: 1rem;  padding: 2rem 0.5rem; }
+  .apartbul{margin: 1rem ; padding: 1rem 0.5rem;}
+  .gbtxt{ font-size: 1rem; font-weight: 600;}
+  .parnam{margin: 0.5rem 0.5rem; font-size: 0.8rem; font-weight: 500; text-align: center; }
+  .parval{margin: 0.5rem 0.5rem; font-size: 1.2rem; font-weight: 700; text-align: center;}
+  .engpara{display: grid; grid-template-columns: auto auto; margin: 2rem auto; 
+           grid-row: auto auto; grid-column-gap: 20px; grid-row-gap: 20px; }
+ .aptparnam{margin: 0.5rem 0.5rem; font-size: 0.8rem; font-weight: 500; text-align: center; }
+  .aptparval{margin: 0.5rem 0.5rem; font-size: 1.2rem; font-weight: 700; text-align: center;}
+  .aptengpara{display: grid; grid-template-columns: auto auto; margin: 2rem auto; 
+           grid-row: auto auto; grid-column-gap: 20px; grid-row-gap: 20px; }
+  .vol,.pwrcos,.peakI,.rmsI{ height: 7rem; box-shadow: 1px 1px 1px 1px gray; display: flex; flex-direction: column; justify-content: center; }
+  .aptvol,.aptpwrcos,.aptpeakI,.aptrmsI{ height: 7rem; display: flex; flex-direction: column; justify-content: center; }
+  .vol{}
+  .pwrcos{}
+  .peakI{}
+  .rmsI{}
+}
+@media  only screen and  (min-width: 769px) {
+  .generalbul{ margin: 0.8rem auto 1rem 1rem; width: 90%;  padding: 1rem 1rem; }
+  .aameter{display: flex; width: 92%;}
+  .apartbul{margin: 0.1rem 0% 1rem 1rem; padding: 1rem 1rem; width: 48%;}
+  .gbtxt{ font-size: 1.5rem; font-weight: 500;}
+  .engpara{display: flex; justify-content: space-between; margin: 1rem auto;}
+  .vol,.pwrcos,.peakI,.rmsI{ width: 22%; height: 5.5rem; }
+  .parnam{margin: 0.5rem auto; margin-left: 10%; font-size: 0.8rem; font-weight: 500; }
+  .parval{margin: 0.5rem 10%; font-size: 1.8rem; font-weight: 500;}
+  .aptengpara{display: grid; grid-template-columns: auto auto; 
+    grid-row: auto auto; grid-column-gap: 20px; grid-row-gap: 20px;  margin: 1.5rem auto;}
+  .aptparnam{margin: 0.5rem auto; margin-left: 10%; font-size: 0.8rem; font-weight: 500; }
+  .aptparval{ text-align: center;margin: 0.5rem 10%; font-size: 1rem; font-weight: 700;}
+  .aptvol,.aptpwrcos,.aptpeakI,.aptrmsI{  width: 90%; height: 3.7rem; }
 }
