--- a/src/index.css
+++ b/src/index.css
@@ -211,12 +211,11 @@ a {text-decoration: none;}
   .ctimg{ max-height: 100%;}
   .contactbdy{ margin-top: 3rem;}
 }
-
-
-
-
-
-
+@media  only screen and  (min-width: 1400px) {
+  .lndimg{ max-height: 100%;}
+  .landpics{margin-top: 7%; display: flex; height: 20rem; justify-content: center; }
+.lndimg2{ z-index: 2; margin-left: -10%; margin-top: -5%; margin-right: -10%; max-height: 100%;}
+}
 
 
 
@@ -266,6 +265,9 @@ a {text-decoration: none;}
     display: flex; 
     justify-content: space-between;
     padding: 1rem 1rem;
+    position: fixed;
+    background-color: #F7F7F7 ;
+    top: 0%;
     
   }
   .loglogo{display: flex; justify-content: center;}   
@@ -276,14 +278,20 @@ a {text-decoration: none;}
   }
   .loglogname{ display: none;}
   .loglogondname{display: flex;}
-  .logprof{ width: 7rem; }
-  .profpic{height: 3rem; width: 3rem;  display: flex; margin-left: 3rem;}
+  .logprof{ width: 50vw; }
+  .profpic{height: 3.5rem; width: 3.5rem;   display: flex; margin-left: 30vw;}
   .droparr{ user-select: none;  margin-left: 1rem; justify-content: center; display: flex; flex-direction: column;}
   .profpic img{  border-radius: 50%; max-height: 100%; max-width: 100%;}
+  .initials{border-radius: 50%; height: 3rem; width: 3rem; 
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    font-size: 1.5rem; 
+    justify-content: center;}
   .profdetails{ position: relative; background-color: #F7F7F7; z-index: 9; text-align: right; }
   .profhide{display:none;}
-  .proftxt{padding-bottom: 1rem; background-color: #F7F7F7;  }
-  .mt5{margin-top: 1rem;}
+  .proftxt{padding-bottom: 0; background-color: #F7F7F7; margin-top: 0%; padding-right: 0.5rem;  }
+  .mt5{padding-top: 1rem;}
   .profname, .profstat{font-size: 1rem;}
   .outhide{display: none;}
   .proflogout{ text-align: center; cursor: pointer; z-index: 3; position: relative; padding: 2rem 1rem;
@@ -293,7 +301,7 @@ a {text-decoration: none;}
   .proflogout:hover{line-height: 2rem;}
   .out2{font-size: 2rem;}
   .proflogout p{font-size: 1rem; margin-left: 0.5rem;}  
- .dashbody{width: 100%; height: 100%; }
+ .dashbody{width: 100%; height: 100%; padding-bottom: 12vh; padding-top: 12vh; }
   .dashnav{ background-color: white; height: 10vh; width: 100%; position: fixed; bottom: 0%; display: flex; border-top: #159302 solid 2px;}
   .dashtitle{ line-height: 2rem; margin: auto 1rem; color: #159302; font-weight: 600;}
 }
@@ -315,9 +323,15 @@ a {text-decoration: none;}
   .loglogname{ padding-left: 30%; color: #159302; margin-top: 5%;}
   .loglogondname{display: flex; flex-direction: column;}
   .logprof{ margin-top: 20%;}
-  .profpic{height: 5rem; width: 5rem; margin: auto auto; display: flex; justify-content: center;}
+  .profpic{height: 5rem; width: 5rem;  margin: auto auto; display: flex; justify-content: center;}
   .droparr{ user-select: none;  margin-left: 1rem; justify-content: center; display: flex; flex-direction: column;}
   .profpic img{border-radius: 50%; max-height: 100%; max-width: 100%;}
+  .initials{border-radius: 50%; height: 4rem; width: 4rem; 
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    font-size: 2rem; 
+    justify-content: center;}
   .profdetails{ padding-left: 30%; width: 100%;}
   .profhide{display:none;}
   .proftxt{ margin: 5% auto; height: 5rem;}
@@ -343,25 +357,26 @@ a {text-decoration: none;}
 border-radius: 1rem;
 }
 .gbtxt{ color: #0D5A01;}
-.vol,.pwrcos,.peakI,.rmsI, .aptvol,.aptpwrcos,.aptpeakI,.aptrmsI{ border-radius: 10px; box-shadow: 0px 2px 4px 2px #0000001A;
+.vol,.pwrcos,.peakI,.rmsI, .aptvol,.aptpwrcos,.aptpeakI,.aptrmsI, .tnou{ border-radius: 10px; box-shadow: 0px 2px 4px 2px #0000001A;
 }
 
-.vol, .aptvol{ background-color: #E8F4E6; color: #35A224; }
+.vol, .tnou{ background-color: #E8F4E6; color: #35A224; }
+.aptvol{background-color: #EEF6F9; color: #336374;}
 .pwrcos, .aptpwrcos{ background-color: #E6E8E9; color: #2C3E4C;}
 .peakI, .aptpeakI{ background-color: #FAFAFF; color: #94959C;}
 .rmsI, .aptrmsI{ background-color: #EEF6F9; color: #336374;}
-.powctr{display: flex;}
-.powctxt{font-weight: 600; font-size: 1rem; margin-right: 20%;}
+.powctr{display: flex; user-select: none;}
+.powctxt{font-weight: 600; font-size: 1rem; }
 .ctrbtnon, .ctrbtnoff{ display: flex; height: 1.3rem; width: 2.5rem; 
-  background-color: #E8F4E6; border-radius: 2rem; cursor: pointer;}
+  background-color: #E8F4E6; border-radius: 2rem; cursor: pointer; user-select: none;}
 .ctrbtnoff{justify-content: left;}
 .ctrbtnon{justify-content: right;}
 .ctrbtnoff .PWRON{background-color: gray;}
-.PWRON{ background-color: #159302; border-radius: 50%; width: 50%; height: 1.4rem; margin: auto 1px}
+.PWRON{ user-select: none; background-color: #159302; border-radius: 50%; width: 50%; height: 1.4rem; margin: auto 1px}
  
 @media  only screen and  (max-width: 768px) {
-  .generalbul{ margin: 1rem;  padding: 2rem 0.5rem; }
-  .apartbul{margin: 1rem ; padding: 1rem 0.5rem;}
+  .generalbul{ margin: 1rem;  padding: 2rem 1rem; }
+  .apartbul{margin: 1rem ; padding: 1rem 1rem;}
   .gbtxt{ font-size: 1rem; font-weight: 600;}
   .parnam{margin: 0.5rem 0.5rem; font-size: 0.8rem; font-weight: 500; text-align: center; }
   .parval{margin: 0.5rem 0.5rem; font-size: 1.2rem; font-weight: 700; text-align: center;}
@@ -371,8 +386,10 @@ border-radius: 1rem;
   .aptparval{margin: 0.5rem 0.5rem; font-size: 1.2rem; font-weight: 700; text-align: center;}
   .aptengpara{display: grid; grid-template-columns: auto auto; margin: 2rem auto; 
            grid-row: auto auto; grid-column-gap: 20px; grid-row-gap: 20px; }
-  .vol,.pwrcos,.peakI,.rmsI{ height: 7rem; box-shadow: 1px 1px 1px 1px gray; display: flex; flex-direction: column; justify-content: center; }
-  .aptvol,.aptpwrcos,.aptpeakI,.aptrmsI{ height: 7rem; display: flex; flex-direction: column; justify-content: center; }
+  .vol,.pwrcos,.peakI,.rmsI{ height: 7rem; display: flex; flex-direction: column; justify-content: center; }
+  .aptvol,.aptpwrcos,.aptpeakI,.aptrmsI, .tnou{ height: 7rem; display: flex; flex-direction: column; justify-content: center; }
+  .powctr{display: flex; justify-content: space-between;}
+  .tnou{margin-top: 1rem; height: 5rem;}
   .vol{}
   .pwrcos{}
   .peakI{}
@@ -380,16 +397,123 @@ border-radius: 1rem;
 }
 @media  only screen and  (min-width: 769px) {
   .generalbul{ margin: 0.8rem auto 1rem 1rem; width: 90%;  padding: 1rem 1rem; }
-  .aameter{display: flex; width: 92%;}
+  .aameter{display: flex; width: 92%; justify-content: center;}
   .apartbul{margin: 0.1rem 0% 1rem 1rem; padding: 1rem 1rem; width: 48%;}
   .gbtxt{ font-size: 1.5rem; font-weight: 500;}
   .engpara{display: flex; justify-content: space-between; margin: 1rem auto;}
   .vol,.pwrcos,.peakI,.rmsI{ width: 22%; height: 5.5rem; }
   .parnam{margin: 0.5rem auto; margin-left: 10%; font-size: 0.8rem; font-weight: 500; }
   .parval{margin: 0.5rem 10%; font-size: 1.8rem; font-weight: 500;}
+  .powctxt{ margin-right: 20%;}
   .aptengpara{display: grid; grid-template-columns: auto auto; 
     grid-row: auto auto; grid-column-gap: 20px; grid-row-gap: 20px;  margin: 1.5rem auto;}
   .aptparnam{margin: 0.5rem auto; margin-left: 10%; font-size: 0.8rem; font-weight: 500; }
   .aptparval{ text-align: center;margin: 0.5rem 10%; font-size: 1rem; font-weight: 700;}
   .aptvol,.aptpwrcos,.aptpeakI,.aptrmsI{  width: 90%; height: 3.7rem; }
+  .tnou{width: 100%; height: 3rem;}
 }
+
+
+
+
+/***************   Signup/in *************/
+
+.signpage{}
+.signside{}
+.signmains{}
+input:invalid ~ .errmessage{display: block;}
+
+
+
+ 
+@media  only screen and  (max-width: 768px) {
+  .signpage{}
+  .signside{ display: none;}
+  .signmains{}
+
+  .signform{ display: flex;  margin: 1rem auto; 
+            width: 90%; padding: 3% 3%; border-radius: 1rem;
+            border: 1px solid #F1F1F1 }
+  .formHead{ display: flex; flex-direction: column; width: 100%;}
+  .formlogo{display: flex; margin: auto auto; width: 100%; justify-content: center;}
+  .formlogo img{ height: 1.5rem; width: 1.2rem; }
+  .formlogo p{ font-size: 1rem; margin-left: 0.5rem; font-weight: 400;
+     line-height: 1.5rem; color:#159302 ; margin-bottom: 0.5rem;}
+   .formtitle{ text-align: center; color: #159302;}
+   .upform{display: flex; flex-direction: column; width: 100%;}
+   .upbel{font-size: 0.8rem; color: gray; width: 80%; margin: 0.2rem auto;  }
+   .upput{ width: 100%; border-radius: 10px; font-size: 0.8rem; outline: none;
+           height: 2rem; border: 1px solid gray;}
+    .brnone{ border: none;}
+   .passwordInputDiv{ display: flex;}
+   .passwordInput{ margin: auto auto; outline: none; border: none;  border-radius: 10px; height: 80%; width: 90%; font-size: 1rem;}
+   .showPassword{ cursor: pointer; margin: auto auto;} 
+   .forgotcontainer{display: flex; justify-content: right;}
+   .forgotPasswordLink{ margin-top: 0.5rem; width: max-content; color: #0D5A01;}
+   .signUpBar{ display: flex; width: 100%; margin-top: 1rem;}
+   .signInBar{ display: flex; width: 100%; margin-top: 2rem;}
+   .signButton{ margin: auto auto; background-color: #159302; border-radius: 10px;  padding: 0.8rem 3rem;}
+  .signText{text-align: center; color: white;}
+  .errmessage{font-size: 0.8rem; padding: 3px; color: red;}
+  .input{ width: 100%; border-radius: 10px; font-size: 0.8rem; outline: none;
+    height: 2.5rem; border: 1px solid gray; margin-bottom: 1rem;}
+    .informmt{margin-top: 3rem;}
+  .MDT-slide{ display: flex; justify-content: center; margin-bottom: 1.5rem;}
+
+
+  .MDT-cont{display: flex;  flex-wrap: wrap; justify-content: left;}
+    .MDTdiv{ width: 100%; margin: 1rem 0.5rem;   }
+    .MDTimg{height: 12rem; width: 12rem; margin: auto auto; display: flex; justify-content: center;}
+    .MDTimg img{max-height: 100%;}
+   .MDTcontent{ color: #0D5A01; text-align: center; margin: 1rem auto;} 
+}
+ 
+@media  only screen and  (min-width: 769px) {
+  .signpage{display: flex;}
+  .signside{ height: 100vh; width: 30%; position: fixed;}
+  .signside img { height: 100vh; width: 30vw;} 
+  .signmains{ display: flex; width: 70%; height: 100vh;margin-left: 30%; position: fixed;}
+  .signform{ display: flex;  margin: auto auto; width: 70%; padding: 3% 3%; border: 1px solid #F1F1F1 }
+  .formHead{ display: flex; flex-direction: column; width: 100%;}
+  .formlogo{display: flex; margin: auto auto; width: 100%; justify-content: center;}
+  .formlogo img{ height: 1.5rem; width: 1.2rem; }
+  .formlogo p{ font-size: 1rem; margin-left: 0.5rem; font-weight: 400;
+     line-height: 1.5rem; color:#159302 ; margin-bottom: 0.5rem;}
+   .formtitle{ text-align: center; color: #159302;}
+   .upform{display: flex; flex-direction: column; width: 100%;}
+   .upbel{font-size: 0.8rem; color: gray; width: 80%; margin: 0.2rem auto;  }
+   .upput{ width: 100%; border-radius: 10px; font-size: 0.8rem; outline: none;
+           height: 2rem; border: 1px solid gray;}
+    .brnone{ border: none;}
+   .passwordInputDiv{ display: flex;}
+   .passwordInput{ margin: auto auto; outline: none; border: none;  border-radius: 10px; height: 80%; width: 90%; font-size: 1rem;}
+   .showPassword{ cursor: pointer; margin: auto auto;} 
+   .forgotcontainer{display: flex; justify-content: right;}
+   .forgotPasswordLink{ margin-top: 0.5rem; width: max-content; color: #0D5A01;}
+   .signUpBar{ display: flex; width: 100%; margin-top: 1rem;}
+   .signInBar{ display: flex; width: 100%; margin-top: 2rem;}
+   .signButton{ margin: auto auto; background-color: #159302; border-radius: 10px;  padding: 0.8rem 3rem;}
+  .signText{text-align: center; color: white;}
+  .errmessage{font-size: 0.8rem; padding: 3px; color: red;}
+  .input{ width: 100%; border-radius: 10px; font-size: 0.8rem; outline: none;
+    height: 2.5rem; border: 1px solid gray; margin-bottom: 1rem;}
+    .informmt{margin-top: 3rem;}
+    
+    .MDT-slide{ display: contents;}
+
+
+.MDT-cont{display: flex;  flex-wrap: wrap; justify-content: left; margin: auto auto; margin-top: 2rem; }
+  .MDTdiv{ width: 14rem;   }
+  .MDTimg{height: 12rem; width: 12rem; margin: auto auto;}
+  .MDTimg img{max-height: 100%;}
+ .MDTcontent{ color: #0D5A01; text-align: center; margin: 1rem auto;} 
+
+}
+@media  only screen and  (min-width: 420px) and  (max-width: 768px) {
+  .MDTimg{height: 15rem; width: 15rem; margin: auto auto;}
+  .MDTimg img{max-height: 100%;}
+}
+
+.addressInput{height: 4rem;}
+.MDT-swiper{width: 90%; margin: auto auto;}
+p.instead{font-size: 0.8rem; margin-top: 1rem;}
