--- a/src/index.css
+++ b/src/index.css
@@ -517,3 +517,35 @@ input:invalid ~ .errmessage{display: block;}
 .addressInput{height: 4rem;}
 .MDT-swiper{width: 90%; margin: auto auto;}
 p.instead{font-size: 0.8rem; margin-top: 1rem;}
+
+
+/********* spinnner *****/
+.loadingSpinnerContainer {
+  position: fixed;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  background-color: rgba(0, 0, 0, 0.5);
+  z-index: 5000;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.loadingSpinner {
+  width: 64px;
+  height: 64px;
+  border: 8px solid;
+  border-color: #00cc66 transparent #00cc66 transparent;
+  border-radius: 50%;
+  animation: spin 1.2s linear infinite;
+}
+@keyframes spin {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
