--- a/src/index.css
+++ b/src/index.css
@@ -308,6 +308,7 @@ a {text-decoration: none;}
 
 @media  only screen and  (min-width: 769px) {
   .adminpage{display: flex;}
+  .adminMs{display: flex; width: 100%;}
   .logNav{
     width: 20%;
     height: 100vh;
@@ -360,11 +361,11 @@ border-radius: 1rem;
 .vol,.pwrcos,.peakI,.rmsI, .aptvol,.aptpwrcos,.aptpeakI,.aptrmsI, .tnou{ border-radius: 10px; box-shadow: 0px 2px 4px 2px #0000001A;
 }
 
-.vol, .tnou{ background-color: #E8F4E6; color: #35A224; }
-.aptvol{background-color: #EEF6F9; color: #336374;}
+.vol, .tnou{ background-color: #E8F4E6; color: #35A224;  }
+.aptvol{background-color: #EEF6F9; color: #35A224;}
 .pwrcos, .aptpwrcos{ background-color: #E6E8E9; color: #2C3E4C;}
 .peakI, .aptpeakI{ background-color: #FAFAFF; color: #94959C;}
-.rmsI, .aptrmsI{ background-color: #EEF6F9; color: #336374;}
+.rmsI, .aptrmsI{ background-color: #EEF6F9; color: #336374; }
 .powctr{display: flex; user-select: none;}
 .powctxt{font-weight: 600; font-size: 1rem; }
 .ctrbtnon, .ctrbtnoff{ display: flex; height: 1.3rem; width: 2.5rem; 
@@ -397,8 +398,8 @@ border-radius: 1rem;
 }
 @media  only screen and  (min-width: 769px) {
   .generalbul{ margin: 0.8rem auto 1rem 1rem; width: 90%;  padding: 1rem 1rem; }
-  .aameter{display: flex; width: 92%; justify-content: center;}
-  .apartbul{margin: 0.1rem 0% 1rem 1rem; padding: 1rem 1rem; width: 48%;}
+  .aameter{display: flex; width: 80%; justify-content: center;}
+  .apartbul{margin: 1rem 0% 1rem 0rem; padding: 1rem 1rem; width: 80%;}
   .gbtxt{ font-size: 1.5rem; font-weight: 500;}
   .engpara{display: flex; justify-content: space-between; margin: 1rem auto;}
   .vol,.pwrcos,.peakI,.rmsI{ width: 22%; height: 5.5rem; }
